Change build destination to docs folder (for GH pages)

--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
 # Build settings
+destination: docs
 markdown: kramdown
 gems:
   - jekyll-feed
