Update font to use locale files UI/UX upates

--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@
 # in the templates via {{ site.myvariable }}.
 title: "IRL podcast: Get real online."
 email: irlpodcast@mozilla.com
-description: "Check out IRL, the new podcast from Mozilla. Because online life is real life."
+description: "Check out IRL, an original podcast from Mozilla. Because online life is real life."
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 
