Improve OG stuff Small improvements based on Micaela's doc

--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: "IRL podcast: Get real online."
+title: "IRL podcast: Get real online"
 email: irlpodcast@mozilla.com
 description: "Check out IRL, an original podcast from Mozilla. Because online life is real life."
 baseurl: "" # the subpath of your site, e.g. /blog
