[fix #85] Improve local Docker dev.
- Make filesystem mount in docker-compose.yml delegated
- Only hash CSS/JS file names when building for dev/stage/prod

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 hugo:
   image: jojomi/hugo:0.40.2
   volumes:
-    - ./:/src
+    - ./:/src:delegated
   environment:
     - HUGO_WATCH=True
   ports:
