--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "IRL: Because Online Life Is Real Life",
   "repository": {
     "type": "git",
-    "url": "TBD"
+    "url": "https://github.com/mozilla/irlpodcast"
   },
   "author": "Mozilla",
   "license": "MPL",
@@ -12,7 +12,9 @@
     "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-hash": "^4.2.2",
+    "gulp-if": "^2.0.2",
     "gulp-minify": "^2.1.0",
-    "gulp-sass": "^3.1.0"
+    "gulp-sass": "^3.1.0",
+    "yargs": "^11.0.0"
   }
 }
