--- a/.editorconfig
+++ b/.editorconfig
@@ -6,15 +6,6 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 charset = utf-8
-
-#indentation
-[*.{html,scss,js,yml,json}]
 indent_style = space
-indent_size = 2
-
-[*.toml]
-indent_style = space
-indent_size = 4
-
-[jenkinsfile]
+trim_trailing_whitespace = true
 indent_size = 4
