--- a/netlify.toml
+++ b/netlify.toml
@@ -5,3 +5,15 @@
 [build.environment]
   NODE_VERSION = "v8.17.0"
   HUGO_VERSION = "0.40.2"
+
+[context.production.environment]
+  CONFIG_FILE = "prod"
+
+[context.master.environment]
+  CONFIG_FILE = "stage"
+
+[context.dev.environment]
+  CONFIG_FILE = "dev"
+
+[context.deploy-preview.environment]
+  CONFIG_FILE = "dev"
