--- a/netlify.toml
+++ b/netlify.toml
@@ -54,3 +54,7 @@
   for = "/images/*"
   [headers.values]
     Cache-Control = "max-age=3600, public"
+
+[[redirects]]
+  from = "/twit"
+  to = "https://2022.internethealthreport.org/"
