Add redirect for /castbox

--- a/netlify.toml
+++ b/netlify.toml
@@ -58,3 +58,7 @@
 [[redirects]]
   from = "/twit"
   to = "https://2022.internethealthreport.org/"
+
+[[redirects]]
+  from = "/castbox"
+  to = "https://2022.internethealthreport.org/"
