add TWIT (caps) redirect

--- a/netlify.toml
+++ b/netlify.toml
@@ -62,3 +62,7 @@
 [[redirects]]
   from = "/castbox"
   to = "https://2022.internethealthreport.org/?utm_medium=podcast&utm_source=castbox&utm_campaign=ihr2022&utm_content=castbox"
+
+[[redirects]]
+  from = "/TWIT"
+  to = "https://2022.internethealthreport.org/?utm_medium=podcast&utm_source=twit&utm_campaign=ihr2022&utm_content=twit"
