--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
   "author": "Mozilla",
   "license": "MPL",
   "dependencies": {
-    "@mozilla-protocol/core": "^11.0.0",
-    "sass": "^1.66.1"
+    "@mozilla-protocol/core": "^11.0.0"
   },
   "devDependencies": {
     "del": "^3.0.0",
@@ -22,6 +21,7 @@
     "gulp-minify": "^3.1.0",
     "gulp-sass": "^5.1.0",
     "gulp-stylelint": "^8.0.0",
+    "sass": "^1.68.0",
     "stylelint": "^9.10.1",
     "yargs": "^13.2.1"
   }
