--- a/config.toml
+++ b/config.toml
@@ -2,4 +2,4 @@ title = "IRL Podcast: Online Life is Real Life"
 email = "irlpodcast@mozilla.com"
 buildFuture = true
 [params]
-    description = "Meet IRL's new host, Bridget Todd, who is on a journey to meet people around the world who are making AI more trustworthy, <i>in real life.</i></b> AI is everywhere now. It's part of healthcare, social media, maps, and even killer robots. But who has power over AI? And who is shifting that power? Join IRL's new host, Bridget Todd, as she talks to technology builders and policy folks from around the world who are developing more trustworthy AI that puts people over profits. IRL is an original podcast from Mozilla."
+    description = "Mozilla’s multi-award winning podcast is back! In Season 7, Bridget Todd meets tech builders who put people over profit in artificial intelligence."
