--- a/netlify.toml
+++ b/netlify.toml
@@ -27,9 +27,9 @@
     Cache-Control = "public, max-age=3600"
     Content-Security-Policy = '''
     font-src 'self' *.mozilla.net *.mozilla.org;
-    img-src 'self' data: *.mozilla.net *.mozilla.org www.google-analytics.com;
+    img-src 'self' data: *.mozilla.net *.mozilla.org www.google-analytics.com *.usefathom.com;
     style-src 'self' 'unsafe-inline' *.mozilla.org *.mozilla.net;
-    script-src 'self' 'unsafe-inline' data: *.mozilla.org *.mozilla.net www.google-analytics.com www.googletagmanager.com *.usefathom.com;
+    script-src 'self' 'unsafe-inline' data: *.mozilla.org *.mozilla.net www.google-analytics.com www.googletagmanager.com *.usefathom.com *.netlify.app;
     default-src 'self' *.cdn.mozilla.net assets.mozilla.net;
     child-src 'self' player.simplecast.com embed.simplecast.com;
     form-action 'self' www.mozilla.org;
